Update installer and some changes
Updated installer
New wallpaper added

Fixed focus loss when reporting swaync
Changed some binds in hyprland.conf

--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -27,6 +27,8 @@
     "hide-on-clear": false,
     "hide-on-action": true,
     "script-fail-notify": true,
+    "notification-2fa-action": false,
+    "notification-inline-replies": false,
     "widgets": [
         "mpris",
         "title",
