--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -34,6 +34,19 @@ input-field {
 }
 label {
     monitor =
+    text = $LAYOUT[us,ru]
+    color = $color9
+    font_size = 12
+    font_family = CodeNewRoman Nerd Font Propo
+    position = 120, -100
+    halign = center
+    valign = center
+    shadow_passes = 2
+    shadow_size = 3
+    shadow_color = rgba(0,0,0,0.6)
+}
+label {
+    monitor =
     text = cmd[update:1000] date +"<b>%I</b>"
     color = $color9
     font_size = 200
