--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,6 +144,8 @@ bind = ALT, up, movewindow, u
 bind = ALT, down, movewindow, d 
 bind = $mainMod, INSERT, exec, hyprshot -m region -o ~/Screenshots/
 bind = $mainMod SHIFT, INSERT, exec, hyprshot -m window -o ~/Screenshots/
+bind = $mainMod, DELETE, exec, wf-recorder -f ~/Screencasts/$(date '+%Y-%m-%d_%H-%M-%S').mp4 --audio
+bind = $mainMod SHIFT, DELETE, exec, pkill -INT wf-recorder
 bind = $mainMod, W, togglespecialworkspace, magic
 bind = $mainMod SHIFT, W, movetoworkspace, special:magic
 bindm = $mainMod, mouse:272, movewindow
