--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1985,6 +1985,7 @@ i#: Performance tuning {{{
 
 #: Copy to clipboard
 
+map kitty_mod+с   copy_to_clipboard
 # map kitty_mod+c copy_to_clipboard
 # map cmd+c       copy_to_clipboard
 
@@ -1996,6 +1997,7 @@ i#: Performance tuning {{{
 
 #: Paste from clipboard
 
+map kitty_mod+м   paste_from_clipboard
 # map kitty_mod+v paste_from_clipboard
 # map cmd+v       paste_from_clipboard
 
