--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,10 +142,10 @@ bind = ALT, left, movewindow, l
 bind = ALT, right, movewindow, r
 bind = ALT, up, movewindow, u
 bind = ALT, down, movewindow, d 
-bind = $mainMod, INSERT, exec, hyprshot -m region -o ~/Screenshots/
-bind = $mainMod SHIFT, INSERT, exec, hyprshot -m window -o ~/Screenshots/
-bind = $mainMod, DELETE, exec, wf-recorder -f ~/Screencasts/$(date '+%Y-%m-%d_%H-%M-%S').mp4 --audio
-bind = $mainMod SHIFT, DELETE, exec, pkill -INT wf-recorder
+bind = $mainMod, INSERT, exec, hyprshot -m region -o $(xdg-user-dir PICTURES)/Screenshots/
+bind = $mainMod SHIFT, INSERT, exec, hyprshot -m window -o $(xdg-user-dir PICTURES)/Screenshots/
+bind = $mainMod, DELETE, exec, ~/.config/wf-recorder/screencast.sh
+bind = $mainMod, END, exec, ~/.config/wofi/wofi-calc.sh
 bind = $mainMod, W, togglespecialworkspace, magic
 bind = $mainMod SHIFT, W, movetoworkspace, special:magic
 bindm = $mainMod, mouse:272, movewindow
