Some fixes and improvements

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -145,6 +145,7 @@ bind = ALT, down, movewindow, d
 bind = $mainMod, INSERT, exec, hyprshot -m region -o $(xdg-user-dir PICTURES)/Screenshots/
 bind = $mainMod SHIFT, INSERT, exec, hyprshot -m window -o $(xdg-user-dir PICTURES)/Screenshots/
 bind = $mainMod, DELETE, exec, ~/.config/wf-recorder/screencast.sh
+bind = $mainMod SHIFT, DELETE, exec, kitty -e nvim ~/.config/wf-recorder/config
 bind = $mainMod, END, exec, ~/.config/wofi/wofi-calc.sh
 bind = $mainMod, W, togglespecialworkspace, magic
 bind = $mainMod SHIFT, W, movetoworkspace, special:magic
