Updated hyprland config to Hyprland 0.53

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -161,13 +161,10 @@ bind = $mainMod, M, exit
 bind = $mainMod ALT, SPACE, exec, pypr toggle term
 bind = $mainMod, G, exec, pypr toggle music
 bind = $mainMod, T, exec, pypr toggle taskbar
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
-layerrule = ignorealpha 0.5, waybar
-layerrule = blur, swaync-control-center
-layerrule = blur, swaync-notification
-layerrule = ignorezero, swaync-control-center
-layerrule = ignorezero, swaync-notification
-layerrule = ignorealpha 0.5, swaync-control-center
-layerrule = ignorealpha 0.5, swaync-notification
-layerrule = noanim, selection
+layerrule = blur on, match:namespace waybar
+layerrule = ignore_alpha 0.5, match:namespace waybar
+layerrule = blur on, match:namespace swaync-control-center
+layerrule = blur on, match:namespace swaync-notification
+layerrule = ignore_alpha 0.5, match:namespace swaync-control-center
+layerrule = ignore_alpha 0.5, match:namespace swaync-notification
+layerrule = no_anim on, match:namespace selection
